--- a/FaceTrack/package.json
+++ b/FaceTrack/package.json
@@ -1,47 +1,39 @@
 {
   "name": "facetrack",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.9",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@supabase/supabase-js": "^2.57.4",
+    "base64-arraybuffer": "^1.0.2",
+    "expo": "~54.0.10",
+    "expo-camera": "~17.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-zip-archive": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "babel-preset-expo": "^54.0.3",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
